[package]
name = "gridwalk-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
gdal = { version = "0.18" }
gdal-sys = { version = "0.11", features = ["bindgen"] }
gridwalk-core = { path = "../../gridwalk-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
sqlx = { version = "0.8.6", features = [ "chrono", "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
thiserror = "2.0.17"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
